--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,24 @@
         android:theme="@style/Theme.BlackLab"
         tools:targetApi="31">
         <activity
+            android:name=".CustomViewsJava"
+            android:exported="false" />
+        <activity
+            android:name=".CustomViews"
+            android:exported="false"
+            android:label="@string/title_activity_custom_views"
+            android:theme="@style/Theme.BlackLab" />
+        <activity
             android:name=".NotificationsActivity"
             android:exported="false"
             android:label="@string/title_activity_notifications"
             android:theme="@style/Theme.BlackLab" />
         <activity
-            android:configChanges="uiMode"
             android:name=".DisplayExperimentsActivity"
+            android:configChanges="uiMode"
             android:exported="false"
             android:label="@string/title_display_experiments"
             android:theme="@style/Theme.BlackLab" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
