--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,27 @@
         android:theme="@style/Theme.BlackLab"
         tools:targetApi="31">
         <activity
+            android:name=".ViewsVsActivitiesActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ComposeAssistance"
+            android:exported="false">
+
+        </activity>
+        <activity
             android:name=".CustomViewsJava"
             android:exported="false" />
         <activity
             android:name=".ComposeEx"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_compose_ex"
-            android:theme="@style/Theme.BlackLab">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.BlackLab"></activity>
         <activity
             android:name=".NotificationsActivity"
             android:exported="false"
@@ -38,9 +47,7 @@
             android:theme="@style/Theme.BlackLab" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
